# edgex-python-sdk

./: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  TESTING.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_integration_tests.py  run_tests.py  setup.py
.github/workflows/: publish-to-pypi.yml
edgex_sdk/: __init__.py  client.py
edgex_sdk/account/: client.py
edgex_sdk/asset/: client.py
edgex_sdk/funding/: client.py
edgex_sdk/internal/: starkex_signing_adapter.py
edgex_sdk/metadata/: client.py
edgex_sdk/order/: client.py
edgex_sdk/quote/: client.py
edgex_sdk/transfer/: client.py
edgex_sdk/ws/: client.py
examples/: README.md  advanced_usage.py  basic_usage.py
scripts/: build_and_test_package.py
tests/: test_client.py  test_starkex_signing_adapter.py
tests/integration/: __init__.py  __main__.py  base_test.py  config.py  test_account.py  test_asset.py  test_metadata.py  test_order.py  test_quote.py  test_transfer.py  test_websocket.py
tests/integration/public/: __init__.py  base_test.py  test_metadata.py  test_quote.py  test_websocket.py
