[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edgex-python-sdk"
version = "0.1.0"
description = "A Python SDK for interacting with the EdgeX Exchange API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EdgeX Tech", email = "info@edgex.exchange"}
]
maintainers = [
    {name = "EdgeX Tech", email = "info@edgex.exchange"}
]
keywords = ["edgex", "exchange", "trading", "api", "sdk", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.7"
dependencies = [
    "aiohttp>=3.8.0",
    "websocket-client>=1.0.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.15.0",
    "pycryptodome>=3.15.0",
    "ecdsa>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/edgex-Tech/edgex-python-sdk"
Repository = "https://github.com/edgex-Tech/edgex-python-sdk"
Documentation = "https://github.com/edgex-Tech/edgex-python-sdk#readme"
"Bug Reports" = "https://github.com/edgex-Tech/edgex-python-sdk/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
